
              pgmhist: Add -machine option.

              pgmhist: Add -median, -quartile, and -decile options.

              pamtojpeg2k: default to no compression ratio constraint and
              allow compression ratios less than 1.  Because of compression
              metadata, small images do require loss of quality in order to
              get down to a compression ratio of 1.

              pngtopam -alphapam with grayscale input: fix bug: generates
              invalid output: tuple type GRAYSCALE_ALPHA, but depth 1.  Depth
              should be 2.  Always broken (pngtopam was created in 
              Netpbm 10.44 (September 2008).
              
              pamtotiff: fix bug: XRESOLUTION, YRESOLUTION, and RESOLUTIONUNIT
              not allowed in -tags.  Broken at least since 10.35.

              pnmpsnr: fix crash when invoked (invalidly) with only one
              argument.  Always broken.

              pnmmontage: fix totally wrong output.  Broken in 10.44
              (August 2008).

              pnmmontage: fix random stuff placed in unoccupied space in the
              output image.  Always broken (program was new in 9.10 (January
              2001).

              pbmpscale, pgmhist, pampick, pamtompfont: fix wild pointer
              in command line parsing.  Bug has always been there in 
              pampick, pamtompfont, since 10.50 (March 2010) in pbmpscale,
              since 10.44 (September 2008) in pgmhist.              

              xbmtopbm: fix incorrect output, memory leak.  Thanks Prophet of
              the Way <afu@wta.att.ne.jp>.

              sunicontopnm: Fix incorrect output for depth 8.  Always broken
              (depth = 8 capability was added in 10.53 (December 2010).

              pamgauss: Fix bug: erroneously says -maxval is too big on 64 bit
              system.  Always broken (Pamgauss was added in 10.23 (July 2004).
